ajustes de padding a los elementos para mayor espacio

--- a/sass/breakpoints/_medium.scss
+++ b/sass/breakpoints/_medium.scss
@@ -22,6 +22,14 @@
         gap: 2rem;
       }
       .section3 {
+.divisor1 {
+  p {
+    width: 75%;
+    margin: auto;
+  }
+}
+
+
         .divisor2 .card {
           a.active {
             width: 40%;
