--- a/css/styles.css
+++ b/css/styles.css
@@ -513,8 +513,18 @@ main#index .section1 {
   padding-bottom: 4rem;
   padding-left: 1rem;
 }
+main#index .section1 h1 {
+  padding-bottom: 1.5rem;
+}
 main#index .section2 .divisor {
   gap: 0.5rem;
+}
+main#index .section2 .divisor h2 {
+  padding: 1.5rem;
+}
+main#index .section2 .divisor p {
+  width: 90%;
+  margin: auto;
 }
 main#index .section2 .divisor img {
   height: 10rem;
@@ -538,13 +548,13 @@ main#index .section3 {
 main#index .section3 .divisor1 {
   padding-top: 4rem;
   padding-right: 0;
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
   padding-left: 0;
 }
 main#index .section3 .divisor1 h2 {
   padding: 1rem;
   margin: auto;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 main#index .section3 .divisor2 .card {
   background-color: transparent;
@@ -568,8 +578,15 @@ main#index .section3 .divisor2 .card a.active:hover {
 main#index .section3 .divisor2 .card img {
   width: 80%;
 }
+main#index .section3 .divisor2 .card p {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
 main#index .section3 .divisor3 {
   padding-top: 4rem;
+}
+main#index .section3 .divisor3 h3 {
+  padding: 1.5rem;
 }
 main#index .section3 .divisor3 .mapa {
   max-width: 700px;
@@ -646,6 +663,7 @@ main#musica .divisor-2 .section4 a {
 }
 main#musica .divisor-2 .section4 h3 {
   width: 100%;
+  padding: 1rem;
 }
 
 main.contacto .contenedor .section3 form, main#index .section3, main#index .section3 .divisor1, main#musica .divisor-1, main#musica .divisor-2 .section4 {
@@ -734,6 +752,10 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     align-items: center;
     gap: 2rem;
   }
+  main#index .main .section3 .divisor1 p {
+    width: 75%;
+    margin: auto;
+  }
   main#index .main .section3 .divisor2 .card a.active {
     width: 40%;
   }
@@ -752,7 +774,7 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   h1 strong,
   h2,
   h3 {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
   }
   p {
     font-size: 0.95rem;
@@ -775,6 +797,9 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   main.contacto .contenedor h1 {
     font-size: 2rem;
   }
+  main.contacto .contenedor .section2 p {
+    padding: 0.5rem;
+  }
   main.contacto .contenedor .section3 form {
     padding-top: 1.5rem;
     gap: 0.1rem;
@@ -796,15 +821,21 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   h1 strong,
   h2,
   h3 {
-    font-size: 1.1rem;
+    font-size: 1.6rem;
   }
   p,
   main#musica .divisor-2 .section3 a {
     font-size: 0.9rem;
   }
+  main#index .main .section2 {
+    padding-bottom: 4rem;
+  }
   main#index .main .section2 .divisor {
     display: flex;
     flex-direction: column-reverse;
+  }
+  main#index .main .section2 .divisor .divisor-texto {
+    margin-bottom: 1rem;
   }
   main#index .main .section2 .divisor .divisor-imagen img {
     max-height: 9rem;
@@ -870,28 +901,35 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     margin: auto;
   }
 }
-@media (max-width: 290px) {
+@media (max-width: 324px) {
+  h1,
+  h1 strong {
+    font-size: 1.2rem;
+  }
+  h2,
+  h3 {
+    font-size: 1rem;
+  }
+  p {
+    font-size: 0.7rem;
+    width: auto;
+  }
   header .logo {
     display: none;
   }
   header .logo-2 {
     display: block;
   }
-  p {
-    font-size: 0.6rem;
-    width: auto;
-  }
   footer {
     flex-direction: column;
     height: 6rem;
   }
+  main#index .main .section2 .divisor .divisor-imagen .segunda-imagen {
+    display: none;
+  }
   main#musica {
     margin: 0;
     padding: 0;
-  }
-  main#musica h1,
-  main#musica h3 {
-    width: 100%;
   }
   main#musica p {
     padding: 0;
@@ -909,7 +947,7 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   main#musica .divisor-2 .section4 img {
     width: 90%;
   }
-  main.contacto .contenedor h1 {
-    font-size: 1rem;
+  .contacto .contenedor .section1 h1 {
+    font-size: 1.2rem;
   }
 }/*# sourceMappingURL=styles.css.map */
