--- a/sass/breakpoints/_small.scss
+++ b/sass/breakpoints/_small.scss
@@ -5,7 +5,7 @@
   h1 strong,
   h2,
   h3 {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
   }
 
   p {
@@ -55,6 +55,10 @@
         "section2"
         "section3";
       padding: 2rem;
+
+      .section2 {
+        p {padding: 0.5rem;}
+      }
 
       .section3 form {
         padding-top: 1.5rem;
