--- a/sass/global/_colores.scss
+++ b/sass/global/_colores.scss
@@ -2,8 +2,8 @@
 
 $color-primero: rgb(240, 240, 240);
 $color-segundo: rgb(27, 26, 25);
-$color-tercero: rgb(7, 61, 212);
-$color-cuarto: rgb(225, 202, 83);
+$color-tercero: rgb(225, 202, 83);
+$color-cuarto: rgb(7, 61, 212);
 $color-quinto: rgb(220, 20, 60);
 $color-fondo-op50: rgba(220, 220, 220, 0.5);
 $color-fondo-op50-oscuro: rgba(0, 0, 0, 0.5);
@@ -106,14 +106,24 @@ main.contacto .contenedor .section3 form button {
   color: $color-segundo;
 }
 
-.toggleDark,
-.toggleLight:hover,
-.navbar-brand:hover,
-.navbar-toggler svg:hover,
-footer div#redes ul li a:hover {
+.toggleDark:hover {
+  color: $color-cuarto;
+}
+
+.toggleLight:hover {
   color: $color-tercero;
 }
 
+.toggleDark,
+.toggleLight,
+.navbar-brand:hover,
+.navbar-toggler svg:hover,
+footer div#redes ul li a:hover {
+  color: $color-quinto;
+}
+
+main#index .main .divisor2 .card span.background,
+.back-to-top,
 main#index .main .divisor2 .card a.active:hover,
 main#musica .divisor-2 .section4 a:hover,
 main.contacto .contenedor .section3 form select:hover,
@@ -122,21 +132,11 @@ main.contacto .contenedor .section3 form input:hover,
 main.contacto .contenedor .section3 form textarea:hover,
 a[aria-current="page"],
 .nav-link:hover {
-  background-color: $color-tercero;
+  background-color: $color-quinto;
 }
 
 .checkbox input#checkbox {
-  accent-color: $color-tercero;
-}
-
-.toggleDark:hover,
-.toggleLight {
-  color: $color-cuarto;
-}
-
-main#index .main .divisor2 .card span.background,
-.back-to-top {
-  background-color: $color-quinto;
+  accent-color: $color-quinto;
 }
 
 // 'DARK MODE' = Declaraciones
@@ -196,14 +196,7 @@ body.dark-mode {
     color: $color-primero;
   }
 
-  .navbar-toggler,
-  main#index .main .divisor2 .card a.active:hover,
-  main#musica .divisor-2 .section4 a:hover,
-  main.contacto .contenedor .section3 form button:hover,
-  main.contacto .contenedor .section3 form input:hover,
-  main.contacto .contenedor .section3 form textarea:hover,
-  header a[aria-current="page"],
-  .nav-link:hover {
+  .navbar-toggler {
     color: $color-segundo;
   }
 
@@ -225,27 +218,20 @@ body.dark-mode {
     @include background-image("../assets/img/background/2.webp");
   }
 
-  .toggleDark:hover {
-    color: $color-tercero;
+  .navbar-brand:hover {
+    color: $color-quinto;
   }
 
-  .navbar-brand:hover,
-  .navbar-toggler svg:hover,
-  footer div#redes ul li a:hover {
-    color: $color-cuarto;
-  }
-
+  main#index .main .divisor2 .card span.background,
+  .back-to-top,
   main#index .main .divisor2 .card a.active:hover,
   main#musica .divisor-2 .section4 a:hover,
+  main.contacto .contenedor .section3 form select:hover,
   main.contacto .contenedor .section3 form button:hover,
   main.contacto .contenedor .section3 form input:hover,
   main.contacto .contenedor .section3 form textarea:hover,
   a[aria-current="page"],
   .nav-link:hover {
-    background-color: $color-cuarto;
-  }
-
-  .checkbox input#checkbox {
-    accent-color: $color-cuarto;
+    background-color: $color-quinto;
   }
 }
