--- a/sass/global/_colores.scss
+++ b/sass/global/_colores.scss
@@ -2,8 +2,6 @@
 
 $color-primero: rgb(240, 240, 240);
 $color-segundo: rgb(27, 26, 25);
-$color-tercero: rgb(225, 202, 83);
-$color-cuarto: rgb(7, 61, 212);
 $color-quinto: rgb(220, 20, 60);
 $color-fondo-op50: rgba(220, 220, 220, 0.5);
 $color-fondo-op50-oscuro: rgba(0, 0, 0, 0.5);
@@ -88,9 +86,9 @@ main.contacto .contenedor .section3 form button {
   border: solid 1px $color-segundo;
 }
 
+.toggleDark:hover,
 .navbar-brand,
 .navbar-brand:visited,
-.navbar-toggler svg,
 .navbar-nav a,
 h1,
 h2,
@@ -106,17 +104,10 @@ main.contacto .contenedor .section3 form button {
   color: $color-segundo;
 }
 
-.toggleDark:hover {
-  color: $color-cuarto;
-}
-
-.toggleLight:hover {
-  color: $color-tercero;
-}
-
 .toggleDark,
 .toggleLight,
 .navbar-brand:hover,
+.navbar-toggler svg,
 .navbar-toggler svg:hover,
 footer div#redes ul li a:hover {
   color: $color-quinto;
@@ -180,7 +171,6 @@ body.dark-mode {
 
   .navbar-brand,
   .navbar-brand:visited,
-  .navbar-toggler svg,
   .navbar-nav a,
   h1,
   h2,
