--- a/sass/global/_colores.scss
+++ b/sass/global/_colores.scss
@@ -45,6 +45,7 @@ main.contacto .contenedor .section3 form ::placeholder {
   color: $color-fondo-op50-oscuro;
 }
 
+.toggleLight:hover,
 .navbar-toggler,
 main#index .main .divisor2 .card span.background,
 main#index .main .divisor2 .card a.active:hover,
