--- a/sass/global/_colores.scss
+++ b/sass/global/_colores.scss
@@ -2,16 +2,14 @@
 
 $color-primero: rgb(240, 240, 240);
 $color-segundo: rgb(27, 26, 25);
-$color-quinto: rgb(220, 20, 60);
-$color-fondo-op50: rgba(220, 220, 220, 0.5);
-$color-fondo-op50-oscuro: rgba(0, 0, 0, 0.5);
-$color-fondo-op100: rgb(220, 220, 220, 0.9);
-$color-fondo-op100-oscuro: rgb(0, 0, 0);
-$color-primero-transparente: rgba(244, 244, 244, 0.4);
-$color-primero-oscuro-transparente: rgba(234, 234, 234, 0.1);
+$color-tercero: rgb(220, 20, 60);
+$color-fondo-claro: rgba(220, 220, 220, 0.7);
+$color-fondo-oscuro: rgba(0, 0, 0, 0.8);
+$color-transparente-claro: rgba(244, 244, 244, 0.4);
+$color-transparente-oscuro: rgba(234, 234, 234, 0.1);
 
 @mixin background-image($url) {
-  background: linear-gradient(#{$color-fondo-op100}, #{$color-fondo-op50}),
+  background: linear-gradient(#{$color-fondo-claro}, #{$color-fondo-claro}),
     url($url);
   background-size: cover;
   background-position: center;
@@ -42,7 +40,7 @@ main {
 }
 
 main.contacto .contenedor .section3 form ::placeholder {
-  color: $color-fondo-op50-oscuro;
+  color: $color-fondo-oscuro;
 }
 
 .toggleLight:hover,
@@ -70,7 +68,7 @@ main#index .main .section3 .divisor1 h2,
 main.contacto .contenedor .section3 form input,
 main.contacto .contenedor .section3 form select,
 main.contacto .contenedor .section3 form textarea {
-  background-color: $color-primero-transparente;
+  background-color: $color-transparente-claro;
 }
 
 main#index .main .section3 .divisor1 h2,
@@ -111,7 +109,7 @@ main.contacto .contenedor .section3 form button {
 .navbar-toggler svg,
 .navbar-toggler svg:hover,
 footer div#redes ul li a:hover {
-  color: $color-quinto;
+  color: $color-tercero;
 }
 
 main#index .main .divisor2 .card span.background,
@@ -124,11 +122,11 @@ main.contacto .contenedor .section3 form input:hover,
 main.contacto .contenedor .section3 form textarea:hover,
 a[aria-current="page"],
 .nav-link:hover {
-  background-color: $color-quinto;
+  background-color: $color-tercero;
 }
 
 .checkbox input#checkbox {
-  accent-color: $color-quinto;
+  accent-color: $color-tercero;
 }
 
 // 'DARK MODE' = Declaraciones
@@ -136,8 +134,8 @@ a[aria-current="page"],
 body.dark-mode {
   @mixin background-image($url) {
     background: linear-gradient(
-        #{$color-fondo-op100-oscuro},
-        #{$color-fondo-op50-oscuro}
+        #{$color-fondo-oscuro},
+        #{$color-fondo-oscuro}
       ),
       url($url);
     background-size: cover;
@@ -167,7 +165,7 @@ body.dark-mode {
   }
 
   main.contacto .contenedor .section3 form ::placeholder {
-    color: $color-fondo-op50;
+    color: $color-fondo-claro;
   }
 
   .navbar-brand,
@@ -202,7 +200,7 @@ body.dark-mode {
   main.contacto .contenedor .section3 form input,
   main.contacto .contenedor .section3 form select,
   main.contacto .contenedor .section3 form textarea {
-    background-color: $color-primero-oscuro-transparente;
+    background-color: $color-transparente-oscuro;
   }
 
   main.contacto {
@@ -211,7 +209,7 @@ body.dark-mode {
 
   .navbar-brand:hover,
   .navbar-toggler svg:hover {
-    color: $color-quinto;
+    color: $color-tercero;
   }
 
   main#index .main .divisor2 .card span.background,
@@ -224,6 +222,6 @@ body.dark-mode {
   main.contacto .contenedor .section3 form textarea:hover,
   a[aria-current="page"],
   .nav-link:hover {
-    background-color: $color-quinto;
+    background-color: $color-tercero;
   }
 }
